# dhbw-bt

./: .gitignore  BT.tex  BachelorThesis.ctv6
code/: appendix_event_ars_protobuf.json  appendix_event_ars_raw.json  appendix_event_dep_protobuf.json  appendix_event_dep_raw.json  appendix_event_vp_protobuf.json  appendix_event_vp_raw.json  solution_ingestion_abstractions.py  solution_protobuf_event_schema.proto  usecase_analytics_protobuf.json  usecase_input_protobuf.json  usecase_mqtt_event.json  usecase_vehicle_distribution_job.java
content/: Abstract.tex  Background.tex  Conclusion.tex  Design.tex  Design_Considerations.tex  Evaluation.tex  Implementation.tex  Introduction.tex  PT_Insight.tex  Solution.tex  Streaming_Platforms.tex  Usecase.tex
figures/: background_bounded_unbounded_streams.ai  background_dataflow_graph.ai  background_distribution_pattern_fanout.ai  background_distribution_pattern_loadbalancing.ai  background_distribution_pattern_mixed.ai  background_kappa_architecture.ai  background_lambda_architecture.ai  background_processing_semantics_atleast.ai  background_processing_semantics_atmost.ai  background_processing_semantics_exactly.ai  background_processing_semantics_scenario.ai  background_topics_partitions.ai  background_window_types_session.ai  background_window_types_sliding.ai  background_window_types_tumbling.ai  evaluation_latency_tracking.ai  evaluation_volume_scaling.ai  figures.ipynb  platforms_flink_cluster.ai  (+9 more)
plots/: figures.ipynb  plots.ipynb  pyproject.toml
plots/data/: latency_1x.csv  latency_2x.csv  latency_32x.csv  latency_8x.csv
(+16 files in other folders)
